# VO-with-Loop-Clousre-Detector

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: KeyFrameSelection.h  parameter_reader.h  vo.h
include/PlaceRecognition/: TemplatedLoopDetector.h
network/: CMakeLists.txt  readme.txt
network/Clients/: Client.cpp  main.cc  vo.cc
network/Servers/: Server.cpp  Server.h  main.cpp
network/include/: Client.h  GraphOptimization.h  vo.h
network/include/PlaceRecognition/: PlaceDetector.h
network/resources/: parameters.txt
parallel/: CMakeLists.txt
parallel/include/: GraphOptimization.h  common_headers.h  concurrent_queue.h  feature.h  frame.h  parameter_reader.h  tracking.h  util.h  view.h  vo.h
parallel/resources/: parameters.txt
parallel/src/: GraphOptimization.cc  main.cc  util.cpp  vo.cc
resources/: parameters.txt
src/: GraphOptimization.cc  main.cc  vo.cc
